--- a/src/assets/stylesheets/variables/_variables.colors.scss
+++ b/src/assets/stylesheets/variables/_variables.colors.scss
@@ -29,7 +29,6 @@ $color-base-orange-light: #f1914b;
 $color-base-orange-normal: #dd792f;
 $color-base-purple-light: #c6c6e1;
 $color-base-purple-normal: #392ca0;
-$color-base-purple-ultra-light: #fbfbfd;
 $color-base-red-normal: #dd2f2f;
 
 // Borders
